Seasonality of weight

--- a/PlatoonFinding.ipynb
+++ b/PlatoonFinding.ipynb
@@ -34,9 +34,7 @@
    "source": [
     "#Takes in the station and the number of the inner lanes in both directions for the period of 2014-2016\n",
     "def one_lane_platoon(Station, lanes):\n",
-    "    df = pd.read_csv('{}Data/2014_2016_datetime.csv'.format(Station), index_col=0, parse_dates=['Date'], dtype={'MMSS': 'str'})\n",
-    "    df = df.drop(columns=['HH', 'MM', 'SS', 'MMSS', 'HHMMSS'])\n",
-    "    \n",
+    "    df = pd.read_csv('{}Data/2014_2016_datetime.csv'.format(Station), index_col=0, parse_dates=['Date'])    \n",
     "    \n",
     "    #For each lane in lanes, find the individual platoon histogram and most common platoon combinations\n",
     "    for lane in lanes:\n",
