Adding count seasonality, WIMConversion and platoon finding class breakdown

--- a/WIMConversion.ipynb
+++ b/WIMConversion.ipynb
@@ -4,25 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matlab to .csv Conversion\n",
+    "# Matlab to .pkl Conversion\n",
     "\n",
-    "The purpose of this notebook is to streamline the conversion of the WIM data from matlab into a useable form. This involves converting first the Matlab table to a struct and then in python converting this struct as well as combining different structs representing different years. Currently years 2014-2016 are combined. The date/times are also converted to a single datetime.\n"
+    "The purpose of this notebook is to streamline the conversion of the WIM data from matlab into a useable form. This involves converting first the Matlab table to a struct and then in python converting this struct as well as combining different structs representing different years. Currently years 2011-2019 are combined. The date/times are also converted to a single datetime.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -114,9 +114,9 @@
     "\n",
     "dfs = []\n",
     "\n",
-    "station = \"Ceneri\"\n",
+    "station = \"Gotthard\"\n",
     "\n",
-    "for year in range(2011, 2018):\n",
+    "for year in range(2011, 2020):\n",
     "    struct = scipy.io.loadmat('{}Data/{}_{}_struct.mat'.format(station, station, year))\n",
     "    df = load_table_from_struct(struct['{}_struct'.format(station)])\n",
     "    df = df_cleaning(df, True)\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "Index(['FS', 'GW_TOT', 'CLASS', 'ZST', 'LENTH', 'CS', 'Date'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,11 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('{}Data/2011_2018_datetime.csv'.format(station))"
+    "df.to_pickle('{}Data/2011_2019_datetime.pkl'.format(station))"
    ]
   },
   {
