--- a/WIMConversion.ipynb
+++ b/WIMConversion.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,15 +114,17 @@
     "\n",
     "dfs = []\n",
     "\n",
-    "station = \"Gotthard\"\n",
+    "stations = ['Ceneri', 'Denges', 'Gotthard']\n",
     "\n",
-    "for year in range(2011, 2020):\n",
-    "    struct = scipy.io.loadmat('{}Data/{}_{}_struct.mat'.format(station, station, year))\n",
-    "    df = load_table_from_struct(struct['{}_struct'.format(station)])\n",
-    "    df = df_cleaning(df, True)\n",
-    "    dfs.append(df)\n",
-    "    \n",
-    "df = pd.concat(dfs, ignore_index=True)"
+    "for station in stations:\n",
+    "    for year in range(2011, 2020):\n",
+    "        struct = scipy.io.loadmat('{}Data/{}_{}_struct.mat'.format(station, station, year))\n",
+    "        df = load_table_from_struct(struct['{}_struct'.format(station)])\n",
+    "        df = df_cleaning(df, True)\n",
+    "        dfs.append(df)\n",
+    "\n",
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "    df.to_pickle('{}Data/2011_2019_datetime.pkl'.format(station))"
    ]
   },
   {
