Adding yearly trends

--- a/PlatoonFinding.ipynb
+++ b/PlatoonFinding.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "#Takes in the station and the number of the inner lanes in both directions for the period of 2014-2016\n",
     "def one_lane_platoon(Station, start_y, end_y, lanes, mode):\n",
-    "    df = pd.read_csv('{}Data/{}_{}_datetime.csv'.format(Station, start_y, end_y), index_col=0, parse_dates=['Date'])    \n",
+    "    df = pd.read_pickle('{}Data/{}_{}_datetime.pkl'.format(Station, start_y, end_y))    \n",
     "    \n",
     "    #For each lane in lanes, find the individual platoon histogram and most common platoon combinations\n",
     "    df_platoon = []\n",
