Finishing up main, starting CSACRConversion

--- a/Lanes.ipynb
+++ b/Lanes.ipynb
@@ -42,17 +42,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations = ['Ceneri', 'Denges', 'Gotthard']"
+    "stations = ['Ceneri', 'Denges', 'Gotthard']\n",
+    "start_year = 2011\n",
+    "end_year = 2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def trucks_per_lane(station):\n",
-    "    df = pd.read_pickle('{}Data/2011_2019_datetime.pkl'.format(station))\n",
+    "def trucks_per_lane(station, start_year, end_year):\n",
+    "    df = pd.read_pickle('{}Data/{}_{}_datetime.pkl'.format(station, start_year, end_year))\n",
     "    \n",
     "    df['Weekday'] = df.Date.dt.weekday\n",
     "    df['Date_d'] = df.Date.dt.date\n",
@@ -73,13 +75,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function trucks_per_lane takes the station to be analyzed and filters for only the weekdays, then groups by the lanes the count of the number of unique datetime stamps and the number of unique dates. The norm of the weekday counts per lane are then recorded by dividing the datetimestamp count by the date count. The function weight_per_lane also filters the weekends and groups by lane, then takes the average total weight of the vehicle by lane."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weight_per_lane(station):\n",
-    "    df = pd.read_pickle('{}Data/2011_2019_datetime.pkl'.format(station))\n",
+    "def weight_per_lane(station, start_year, end_year):\n",
+    "    df = pd.read_pickle('{}Data/{}_{}_datetime.pkl'.format(station, start_year, end_year))\n",
     "    \n",
     "    df['Weekday'] = df.Date.dt.weekday\n",
     "    df['GW_TOT'] = df.GW_TOT/1000\n",
