--- a/WIMConversion.ipynb
+++ b/WIMConversion.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,100 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Isabelle\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  import sys\n",
-      "C:\\Users\\Isabelle\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n",
-      "C:\\Users\\Isabelle\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  if __name__ == '__main__':\n",
-      "C:\\Users\\Isabelle\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Loading matrices from struct in matlab\n",
-    "\n",
-    "dfs = []\n",
-    "\n",
-    "stations = ['Ceneri', 'Denges', 'Gotthard']\n",
-    "\n",
-    "for station in stations:\n",
-    "    for year in range(2011, 2020):\n",
+    "def to_pickle(station, start_year, end_year):\n",
+    "    dfs = []\n",
+    "    for year in range(start_year, end_year):\n",
     "        struct = scipy.io.loadmat('{}Data/{}_{}_struct.mat'.format(station, station, year))\n",
     "        df = load_table_from_struct(struct['{}_struct'.format(station)])\n",
     "        df = df_cleaning(df, True)\n",
     "        dfs.append(df)\n",
     "\n",
     "    df = pd.concat(dfs, ignore_index=True)\n",
-    "    df.to_pickle('{}Data/2011_2019_datetime.pkl'.format(station))"
+    "    df.to_pickle('{}Data/{}_{}_datetime.pkl'.format(station, start_year, end_year))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['FS', 'GW_TOT', 'CLASS', 'ZST', 'LENTH', 'CS', 'Date'], dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All of the columns from the classified data from matlab were decided to be kept. Below the times are converted to a functioning datetime, then the now not needed other columsn for time/date are dropped."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_pickle('{}Data/2011_2019_datetime.pkl'.format(station))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
