--- a/YearlyTrends.ipynb
+++ b/YearlyTrends.ipynb
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yearly_daily_vehicle(station):\n",
-    "    df = pd.read_pickle('{}Data/2011_2019_datetime.pkl'.format(station))\n",
+    "def yearly_daily_vehicle(station, start_year, end_year, headway):\n",
+    "    df = pd.read_pickle('{}Data/{}_{}_datetime_h{}.pkl'.format(station, start_year, end_year, headway))\n",
     "    \n",
     "    df['Year'] = df.Date.dt.year\n",
     "    df['Weekday'] = df.Date.dt.weekday\n",
@@ -77,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yearly_weight(station, violin):\n",
-    "    df = pd.read_pickle('{}Data/2011_2019_datetime.pkl'.format(station))\n",
+    "def yearly_weight(station, start_year, end_year, headway, violin):\n",
+    "    df = pd.read_pickle('{}Data/{}_{}_datetime_h{}.pkl'.format(station, start_year, end_year, headway))\n",
     "    \n",
     "    df['Year'] = df.Date.dt.year\n",
     "    df['Weight'] = df.GW_TOT/1000\n",
@@ -117,15 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yearly_platoon(station):\n",
+    "def yearly_platoon(station, start_year, end_year, headway):\n",
     "    #This function investigates the daily occurances of daily platoon counts by year\n",
     "        \n",
     "    #Get the platoon data\n",
-    "    df_platoon = pd.read_pickle('{}Data/2011_2019_platoon.pkl'.format(station))\n",
+    "    df_platoon = pd.read_pickle('{}Data/{}_{}_platoon_h{}.pkl'.format(station, start_year, end_year, headway))\n",
     "    df_platoon = df_platoon[df_platoon.Length > 1] #Only keep platoons that are at least of length 2\n",
     "    df_platoon['Weekday'] = df_platoon.Start.dt.weekday\n",
     "    df_platoon['Hour'] = df_platoon.Start.dt.hour\n",
@@ -135,7 +135,7 @@
     "\n",
     "    \n",
     "    #Get the general truck data for normalization\n",
-    "    df_truck = pd.read_pickle('{}Data/2011_2019_datetime.pkl'.format(station))\n",
+    "    df_truck = pd.read_pickle('{}Data/{}_{}_datetime.pkl'.format(station, start_year, end_year))\n",
     "    df_truck['Weekday'] = df_truck.Date.dt.weekday\n",
     "    df_truck['Hour'] = df_truck.Date.dt.hour\n",
     "    df_truck['Date_d'] = df_truck.Date.dt.date\n",
