Headway determination, single car seasonality

--- a/CSACRConversion.ipynb
+++ b/CSACRConversion.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def circ_df_pickle(df):\n",
+    "    df = df.fillna(0)\n",
+    "    to_int = ['n', 'd', 'h', 'm', 's', 'ms', 'Lane', 'Dir', 'SwissT']\n",
+    "    df[to_int] = df[to_int].astype(int)\n",
     "    #Less than 1% null, therefore remove the null values\n",
     "    is_null = df.d.isnull()\n",
     "    df = df[df.d != is_null]\n",
@@ -62,25 +65,40 @@
     "    df['len_d'] = df['d_str'].apply(lambda x: len(x))\n",
     "    #Eliminate any date that does not have the minimum length of 5\n",
     "    df = df[df.len_d.isin([5, 6])]\n",
-    "    #Then to breakdown the datetime, some of the columns need to be converted to str\n",
-    "    df['Date'] = df['d'].apply(lambda x: pd.to_datetime(x,errors='coerce', format='%m%d%y'))\n",
+    "    df['d_str'] =df.apply(lambda x: x['d_str'] if x['len_d'] == 6 else '0' + x['d_str'], axis=1)\n",
+    "    df['Date'] = df['d_str'].apply(lambda x: pd.to_datetime(x, errors='coerce', format='%d%m%y'))\n",
     "    df = df.drop(columns=['d'])\n",
     "    df['Date'] += pd.to_timedelta(df.h, unit='h')\n",
     "    df['Date'] += pd.to_timedelta(df.m, unit='m')\n",
     "    df['Date'] += pd.to_timedelta(df.s, unit='s')\n",
     "    df['Date'] += pd.to_timedelta(df.ms, unit='ms')\n",
     "    df = df.drop(columns=['h', 'm', 's', 'ms', 'd_str', 'len_d'])\n",
-    "    \n",
+    "    df['index'] = df.index #Create new index, current index n resets itself\n",
+    "    df = df.drop(columns='n')\n",
+    "    df = df.dropna() #Drop any values that are still null (only 2 for 2017)\n",
+    "    lanes = range(1, 7)\n",
+    "    direc = [1, 2]\n",
+    "    df = df[df.Lane.isin(lanes)]\n",
+    "    df = df[df.Dir.isin(direc)]\n",
     "    pd.to_pickle(df, '{}/{}_circ.pkl'.format(station, year))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Isabelle\\Anaconda3\\lib\\site-packages\\h5py\\_hl\\dataset.py:313: H5pyDeprecationWarning: dataset.value has been deprecated. Use dataset[()] instead.\n",
+      "  \"Use dataset[()] instead.\", H5pyDeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "station = '137'\n",
     "year = 2017\n",
