--- a/Poisson Simulation.ipynb
+++ b/Poisson Simulation.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Isabelle\\Anaconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -30,41 +39,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-7620dc105c67>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Looking at platoons\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Ceneri'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mday_simulation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstation\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Saturday'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-ff171a3895dd>\u001b[0m in \u001b[0;36mday_simulation\u001b[1;34m(station, weekday)\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mrun_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m24\u001b[0m \u001b[1;31m#minutes in a day\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mtf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTimeFunction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_day\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mHour\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_day\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm_count\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.00028\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;31m# We define a 1 dimensional inhomogeneous Poisson process with the\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tick\\base\\timefunc.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, values, border_type, inter_mode, dt, border_value)\u001b[0m\n\u001b[0;32m    107\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_constant\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    108\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 109\u001b[1;33m             \u001b[0mt_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    110\u001b[0m             \u001b[0my_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\numpy\\core\\_asarray.py\u001b[0m in \u001b[0;36masarray\u001b[1;34m(a, dtype, order)\u001b[0m\n\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m     \"\"\"\n\u001b[1;32m---> 85\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     86\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     87\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence."
+     ]
+    }
+   ],
    "source": [
     "#Looking at platoons \n",
     "station = 'Ceneri'\n",
-    "df = pd.read_pickle('{}Data/platoon_{}_seasonality.pkl'.format(station, 'Daily'))"
+    "day_simulation(station, 'Saturday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def day_simulation(station, weekday):\n",
+    "    df = pd.read_pickle('{}Data/platoon_{}_seasonality.pkl'.format(station, 'Daily'))\n",
+    "    df_day = df.loc[df.index == weekday]\n",
+    "    df_day = df_day.groupby(['Hour'])\n",
+    "\n",
+    "    run_time = 24 #minutes in a day\n",
+    "\n",
+    "    tf = TimeFunction((df_day.Hour, df_day.norm_count), dt=0.00028)\n",
+    "\n",
+    "    # We define a 1 dimensional inhomogeneous Poisson process with the\n",
+    "    # intensity function seen above\n",
+    "    in_poi = SimuInhomogeneousPoisson([tf], end_time=run_time, verbose=False)\n",
+    "\n",
+    "    # We activate intensity tracking and launch simulation\n",
+    "    in_poi.track_intensity(0.1)\n",
+    "    in_poi.simulate()\n",
+    "\n",
+    "    # We plot the resulting inhomogeneous Poisson process with its\n",
+    "    # intensity and its ticks over time\n",
+    "    fig, axes = plt.subplots()\n",
+    "    plot_point_process(in_poi, ax=axes)\n",
+    "    axes.set_title('{} {} Inhomogeneous Natural Platoon > 2 Vehicles Poisson Simulation'.format(station, day))\n",
+    "\n",
+    "    axes.yaxis.grid(True)\n",
+    "    axes.set_xlabel('Time (minutes)')\n",
+    "    axes.set_ylabel('Platoon intensity')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle('{}Data/platoon_{}_seasonality.pkl'.format(station, 'Daily'))\n",
     "day = 'Monday'\n",
     "df_monday = df.loc[df.index == day]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df_monday = df_monday.groupby(['Hour', 'Minute'])"
+    "df_monday = df_monday.groupby(['Hour'])"
    ]
   },
   {
@@ -91,22 +143,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>seasonal_count</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Minute</th>\n",
+       "      <th>count</th>\n",
+       "      <th>norm_count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Weekday</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.004515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.006772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.006772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.002257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.006772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.004515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.011287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.006772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.004515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>443</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.013544</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(1418, 5)"
+       "         seasonal_count  Hour  Minute  count  norm_count\n",
+       "Weekday                                                 \n",
+       "Monday              443     0       0      2    0.004515\n",
+       "Monday              443     0       1      3    0.006772\n",
+       "Monday              443     0       2      3    0.006772\n",
+       "Monday              443     0       3      1    0.002257\n",
+       "Monday              443     0       4      3    0.006772\n",
+       "...                 ...   ...     ...    ...         ...\n",
+       "Monday              443    23       0      2    0.004515\n",
+       "Monday              443    23       1      5    0.011287\n",
+       "Monday              443    23       2      3    0.006772\n",
+       "Monday              443    23       3      2    0.004515\n",
+       "Monday              443    23       4      6    0.013544\n",
+       "\n",
+       "[120 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_monday.shape"
+    "df_monday.head()"
    ]
   },
   {
