--- a/CSACRConversion.ipynb
+++ b/CSACRConversion.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,7 @@
     "    direc = [1, 2]\n",
     "    df = df[df.Lane.isin(lanes)]\n",
     "    df = df[df.Dir.isin(direc)]\n",
+    "    df = df[df.SwissT.isin(range(1, 11))] #Ensures only swiss10 classifications are kept\n",
     "    pd.to_pickle(df, '{}/{}_circ.pkl'.format(station, year))\n"
    ]
   },
