--- a/Seasonality.ipynb
+++ b/Seasonality.ipynb
@@ -64,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_seasonality(station, start_year, end_year, headway, seasonality, pickle):\n",
+    "def count_seasonality(station, start_year, end_year, seasonality, pickle):\n",
     "    if seasonality == 'Daily':\n",
     "        frequency = 24\n",
     "        truck_count = 'Weekday'\n",
@@ -83,7 +83,7 @@
     "        months = [3, 4, 5] #Taking months March, April, May\n",
     "    \n",
     "    #Get the general truck data for normalization\n",
-    "    df_truck = pd.read_pickle('{}Data/{}_{}_datetime_h{}.pkl'.format(station, start_year, end_year, headway))\n",
+    "    df_truck = pd.read_pickle('{}Data/{}_{}_datetime.pkl'.format(station, start_year, end_year))\n",
     "    df_truck['Weekday'] = df_truck.Date.dt.weekday\n",
     "    df_truck['Hour'] = df_truck.Date.dt.hour\n",
     "    df_truck['Date_d'] = df_truck.Date.dt.date\n",
@@ -113,7 +113,7 @@
     "                                                     5: 'Saturday', 6:'Sunday'})\n",
     "    \n",
     "    if pickle:\n",
-    "        df_truck_grouped.to_pickle('{}Data/platoon_{}_seasonality_{}_{}_h{}.pkl'.format(station, seasonality, start_year, end_year, headway))\n",
+    "        df_truck_grouped.to_pickle('{}Data/platoon_{}_seasonality_{}_{}.pkl'.format(station, seasonality, start_year, end_year))\n",
     "    else:\n",
     "        #Plotting\n",
     "        #df_platoon_grouped.norm_count.plot(title=\"{} Normalized Natural Truck Platoon with at least 2, count by hour\".format(station))\n",
@@ -211,11 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weight_seasonality(station, start_year, end_year, headway, seasonality):\n",
+    "def weight_seasonality(station, start_year, end_year, seasonality):\n",
     "\n",
     "    if seasonality == 'Daily':\n",
     "        frequency = 24\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
     "    \n",
     "    #Get the platoon data\n",
     "    df_platoon = pd.read_pickle('{}Data/{}_{}_platoon_h{}.pkl'.format(station, start_year, end_year, headway))\n",
-    "    df_platoon = df_platoon[df_platoon.Length > 1] #Only keep platoons that are at least of length 2\n",
+    "    #df_platoon = df_platoon[df_platoon.Length > 1] #Only keep platoons that are at least of length 2\n",
     "    df_platoon['Weekday'] = df_platoon.Start.dt.weekday\n",
     "    df_platoon['Hour'] = df_platoon.Start.dt.hour\n",
     "    df_platoon['Date_d'] = df_platoon.Start.dt.date\n",
