--- a/WIMConversion.ipynb
+++ b/WIMConversion.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "def df_cleaning(df, counting_only):\n",
     "    \n",
     "    #If this will be used for counting only, eliminate the axle weights, etc\n",
-    "    if counting_only:\n",
+    "    if ~counting_only:\n",
     "        df = df[['FS', 'GW_TOT', 'CLASS', 'HHMMSS', 'JJJJMMTT', 'ZST', 'LENTH', 'CS']]\n",
     "    \n",
     "    df['HHMMSS'] = df['HHMMSS'].astype(str) \n",
@@ -75,21 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_pickle(station, start_year, end_year):\n",
+    "def to_pickle(station, start_year, end_year, all_columns):\n",
     "    dfs = []\n",
     "    for year in range(start_year, end_year):\n",
     "        struct = scipy.io.loadmat('{}Data/{}_{}_struct.mat'.format(station, station, year))\n",
     "        df = load_table_from_struct(struct['{}_struct'.format(station)])\n",
-    "        df = df_cleaning(df, True)\n",
+    "        df = df_cleaning(df, all_columns)\n",
     "        dfs.append(df)\n",
     "\n",
     "    df = pd.concat(dfs, ignore_index=True)\n",
-    "    df.to_pickle('{}Data/{}_{}_datetime.pkl'.format(station, start_year, end_year))"
+    "    if all_columns:\n",
+    "        df.to_pickle('{}Data/{}_{}_datetime_all.pkl'.format(station, start_year, end_year))\n",
+    "    else:\n",
+    "        df.to_pickle('{}Data/{}_{}_datetime.pkl'.format(station, start_year, end_year))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
