--- a/WIMConversion.ipynb
+++ b/WIMConversion.ipynb
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_pickle(station, start_year, end_year, all_columns):\n",
     "    dfs = []\n",
-    "    for year in range(start_year, end_year):\n",
+    "    for year in range(start_year, end_year+1):\n",
     "        struct = scipy.io.loadmat('{}Data/{}_{}_struct.mat'.format(station, station, year))\n",
     "        df = load_table_from_struct(struct['{}_struct'.format(station)])\n",
     "        df = df_cleaning(df, all_columns)\n",
