--- a/PlatoonFinding.ipynb
+++ b/PlatoonFinding.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Isabelle\\Anaconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -726,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +781,6 @@
        "      <th>Time</th>\n",
        "      <th>Date</th>\n",
        "      <th>index</th>\n",
-       "      <th>Heavy_veh</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -807,7 +797,20 @@
        "      <td>0.020564</td>\n",
        "      <td>2017-01-01 00:01:14.003</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99.9</td>\n",
+       "      <td>99.9</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>518.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.023911</td>\n",
+       "      <td>2017-01-01 00:01:26.008</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -822,7 +825,6 @@
        "      <td>0.024450</td>\n",
        "      <td>2017-01-01 00:01:28.002</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -837,7 +839,6 @@
        "      <td>0.024636</td>\n",
        "      <td>2017-01-01 00:01:28.069</td>\n",
        "      <td>3</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -852,7 +853,6 @@
        "      <td>0.026739</td>\n",
        "      <td>2017-01-01 00:01:36.026</td>\n",
        "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -867,7 +867,6 @@
        "      <td>0.026844</td>\n",
        "      <td>2017-01-01 00:01:36.064</td>\n",
        "      <td>5</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -882,7 +881,6 @@
        "      <td>0.030639</td>\n",
        "      <td>2017-01-01 00:01:50.030</td>\n",
        "      <td>6</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -897,7 +895,6 @@
        "      <td>0.030792</td>\n",
        "      <td>2017-01-01 00:01:50.085</td>\n",
        "      <td>7</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -912,7 +909,6 @@
        "      <td>0.032422</td>\n",
        "      <td>2017-01-01 00:01:56.072</td>\n",
        "      <td>8</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -927,54 +923,38 @@
        "      <td>0.032814</td>\n",
        "      <td>2017-01-01 00:01:58.013</td>\n",
        "      <td>9</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>47.2</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>473.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.039956</td>\n",
-       "      <td>2017-01-01 00:02:23.084</td>\n",
-       "      <td>10</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      z  Lane  Dir  Headway   IVT  Speed  Length  SwissT      Time  \\\n",
-       "0   0.0     5    1     99.9  99.9  109.0   384.0       3  0.020564   \n",
-       "2   0.0     5    1     13.9  13.8  112.0   379.0       3  0.024450   \n",
-       "3   0.0     5    1      0.6   0.5  115.0   448.0       3  0.024636   \n",
-       "4   0.0     5    1      7.5   7.4  116.0   426.0       3  0.026739   \n",
-       "5   0.0     1    1     33.9  33.8   86.0   446.0       3  0.026844   \n",
-       "6   0.0     5    1     14.0  13.9  101.0   448.0       3  0.030639   \n",
-       "7   0.0     5    1      0.5   0.3  102.0   749.0       4  0.030792   \n",
-       "8   0.0     5    1      5.8   5.6   99.0   422.0       3  0.032422   \n",
-       "9   0.0     5    1      1.4   1.2   98.0   383.0       3  0.032814   \n",
-       "10  0.0     1    1     47.2  47.0  100.0   473.0       3  0.039956   \n",
+       "     z  Lane  Dir  Headway   IVT  Speed  Length  SwissT      Time  \\\n",
+       "0  0.0     5    1     99.9  99.9  109.0   384.0       3  0.020564   \n",
+       "1  0.0     2    1     99.9  99.9  110.0   518.0       3  0.023911   \n",
+       "2  0.0     5    1     13.9  13.8  112.0   379.0       3  0.024450   \n",
+       "3  0.0     5    1      0.6   0.5  115.0   448.0       3  0.024636   \n",
+       "4  0.0     5    1      7.5   7.4  116.0   426.0       3  0.026739   \n",
+       "5  0.0     1    1     33.9  33.8   86.0   446.0       3  0.026844   \n",
+       "6  0.0     5    1     14.0  13.9  101.0   448.0       3  0.030639   \n",
+       "7  0.0     5    1      0.5   0.3  102.0   749.0       4  0.030792   \n",
+       "8  0.0     5    1      5.8   5.6   99.0   422.0       3  0.032422   \n",
+       "9  0.0     5    1      1.4   1.2   98.0   383.0       3  0.032814   \n",
        "\n",
-       "                      Date  index  Heavy_veh  \n",
-       "0  2017-01-01 00:01:14.003      0      False  \n",
-       "2  2017-01-01 00:01:28.002      2      False  \n",
-       "3  2017-01-01 00:01:28.069      3      False  \n",
-       "4  2017-01-01 00:01:36.026      4      False  \n",
-       "5  2017-01-01 00:01:36.064      5      False  \n",
-       "6  2017-01-01 00:01:50.030      6      False  \n",
-       "7  2017-01-01 00:01:50.085      7      False  \n",
-       "8  2017-01-01 00:01:56.072      8      False  \n",
-       "9  2017-01-01 00:01:58.013      9      False  \n",
-       "10 2017-01-01 00:02:23.084     10      False  "
+       "                     Date  index  \n",
+       "0 2017-01-01 00:01:14.003      0  \n",
+       "1 2017-01-01 00:01:26.008      1  \n",
+       "2 2017-01-01 00:01:28.002      2  \n",
+       "3 2017-01-01 00:01:28.069      3  \n",
+       "4 2017-01-01 00:01:36.026      4  \n",
+       "5 2017-01-01 00:01:36.064      5  \n",
+       "6 2017-01-01 00:01:50.030      6  \n",
+       "7 2017-01-01 00:01:50.085      7  \n",
+       "8 2017-01-01 00:01:56.072      8  \n",
+       "9 2017-01-01 00:01:58.013      9  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +974,7 @@
        "array([ 3,  4,  5,  2,  6, 10,  1,  8,  9,  7,  0, 17, 35, 16])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1096,7 @@
        "35             1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1209,7 @@
        "10        672291"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1280,7 @@
        "True        1404126"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1328,7 @@
        "Name: IVT, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1397,6 +1377,40 @@
     "ax.set_ylabel('frequency')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.6"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['Prev_Headway'] < 15) & (~df['Heavy_veh'].shift(-1).fillna(99)) & df['Heavy_veh'] & df['Heavy_veh'].shift(-2)].Prev_Headway.quantile(0.025)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above is the IVT time between trucks that captures Truck-Truck events with only an incidence of capturing 2.5% of the Truck-Car-Truck events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
