SARIMAX updates, poisson and platoon updates

--- a/WIMConversion.ipynb
+++ b/WIMConversion.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_cleaning(df, counting_only):\n",
     "    \n",
     "    #If this will be used for counting only, eliminate the axle weights, etc\n",
-    "    if ~counting_only:\n",
+    "    if not counting_only:\n",
     "        df = df[['FS', 'GW_TOT', 'CLASS', 'HHMMSS', 'JJJJMMTT', 'ZST', 'LENTH', 'CS']]\n",
+    "        print('removed')\n",
+    "    \n",
+    "    #Combine axle weights and axle distances into columns\n",
+    "    ax_cols = [col for col in df if col.startswith('AW')]\n",
+    "    df['AX_W'] = df[ax_cols].values.tolist()\n",
+    "    df = df.drop(columns=ax_cols)\n",
+    "    w_cols = [col for col in df if col.startswith('W')]\n",
+    "    df['AX_DIST'] = df[w_cols].values.tolist()\n",
+    "    df = df.drop(columns=w_cols)\n",
     "    \n",
     "    df['HHMMSS'] = df['HHMMSS'].astype(str) \n",
     "    df['HH'] = df['HHMMSS'].str[:-4]\n",
@@ -70,12 +79,13 @@
     "    df['SS'] = df['SS'].astype(int)\n",
     "    df['Date'] += pd.to_timedelta(df.SS, unit='s')\n",
     "    df = df.drop(columns=['HH', 'MM', 'SS', 'MMSS', 'HHMMSS'])\n",
+    "    \n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +96,7 @@
     "        df = load_table_from_struct(struct['{}_struct'.format(station)])\n",
     "        df = df_cleaning(df, all_columns)\n",
     "        dfs.append(df)\n",
+    "        print('Finished year: {}'.format(year))\n",
     "\n",
     "    df = pd.concat(dfs, ignore_index=True)\n",
     "    if all_columns:\n",
@@ -96,10 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Load the date_time all and see if they contain the needed info\n",
+    "station = \"Ceneri\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_pickle(station, 2003, 2019, True)"
+   ]
   }
  ],
  "metadata": {
@@ -118,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
