--- a/Poisson Simulation.ipynb
+++ b/Poisson Simulation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "from tick.hawkes import SimuInhomogeneousPoisson\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import random\n",
     "sns.set_style('darkgrid')\n",
     "plt.rc('figure',figsize=(12,8))\n",
     "plt.rc('font',size=13)"
@@ -1811,15 +1812,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
@@ -3388,7 +3380,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def poisson_simulation_drawing(df, light_heavy, lane):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -6638,7 +6633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
